--- a/css/jquery.bxslider.css
+++ b/css/jquery.bxslider.css
@@ -16,14 +16,17 @@
 
 .bx-wrapper {
 	position: relative;
-	margin: 0 auto 35px;
+	margin: 0 auto 0px;
 	padding: 0;
 	*zoom: 1;
 }
 
 .bx-wrapper img {
-	max-width: 100%;
+	max-width: 110%;
 	display: block;
+    display: block;
+    width: 100%;
+    max-height: 100%;
 }
 
 /** THEME
@@ -64,6 +67,7 @@
 
 .bx-wrapper .bx-pager {
 	text-align: center;
+	display: none;
 	font-size: .85em;
 	font-family: Arial;
 	font-weight: bold;
